tests/snapshots/tui_snapshot_tests__mode_plan.snap
---
source: tests/tui_snapshot_tests.rs
assertion_line: 172
expression: capture_buffer(&mut app)
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│Tark  <WORKING_DIR>                                            ╭ Panel ──────────────────────────╮│
│                                                               │  VIM: INSERT                    ││
│╭ Messages ───────────────────────────────────────────────────╮│                                 ││
││› ● System Welcome to Tark TUI (TDD Implementation)          ││▼ Session                        ││
││                                                             ││  Session                        ││
││  ● System Type a message and press Enter. Press Ct          ││  $0.015 (3 models) ▼            ││
││           rl+C to quit.                                     ││  0 tokens total                 ││
││                                                             ││                                 ││
││                                                             ││▼ Context  14.8k                 ││
││                                                             ││  14.8k / 128.0k tokens (11.6%)  ││
││                                                             ││  ██░░░░░░░░░░░░░░░░░░           ││
││                                                             ││  Sys: 1.5k  Hist: 12.0k         ││
││                                                             ││  Tools: 800  Files: 500         ││
││                                                             ││  LOADED CONTEXT (0)             ││
││                                                             ││                                 ││
││                                                             ││▶ Tasks 8                        ││
││                                                             ││▼ ⑂ Subagents 0/5•               ││
││                                                             ││                                 ││
││                                                             ││▶ 📋  Todo 0/0                    ││
││                                                             ││▶ Git Changes 5                  ││
│╰─────────────────────────────────────────────────────────────╯│▶ Plugins 0                      ││
│                               ·                               │  🐱  ▼                           ││
│╭ Prompt ─────────────────────────────────────────────────────╮│                                 ││
││ Type a message...                                           ││                                 ││
││                                                             ││                                 ││
││                                                             ││                                 ││
│╰─────────────────────────────────────────────────────────────╯│                                 ││
│Plan ▼   [🧠 ] [💭 ]  ≡ 7                ● tark_llm TARK_SIM  [?]╰─────────────────────────────────╯│
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
