tests/snapshots/tui_snapshot_tests__narrow_terminal.snap
---
source: tests/tui_snapshot_tests.rs
assertion_line: 116
expression: capture_buffer(&mut app)
---
╭──────────────────────────────────────────────────────────────────────────────╮
│🖥 Tark Terminal  <WORKING_DIR>                                │
│                                                                              │
│╭ Messages ──────────────────────────────────────────────────────────────────╮│
││› ● System Welcome to Tark TUI (TDD Implementation)                         ││
││                                                                            ││
││  ● System Type a message and press Enter. Press Ctrl+C to quit.            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
│╰────────────────────────────────────────────────────────────────────────────╯│
│                                       ·                                      │
│╭ Prompt ────────────────────────────────────────────────────────────────────╮│
││ Type a message...                                                          ││
││                                                                            ││
││                                                                            ││
│╰────────────────────────────────────────────────────────────────────────────╯│
│Build ▼  🟢  Balanced ▼  [🧠 ] [💭 ]  ≡ 7                ● tark_llm TARK_SIM  [?]│
╰──────────────────────────────────────────────────────────────────────────────╯
